--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "prettier": "^3.2.5",
     "turbo": "^2.5.4"
   },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "packageManager": "pnpm@8.15.6",
   "name": "with-vite"
 }
