--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,18 +2,33 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "exports": {
+     ".": "./index.ts",
     "./counter": "./components/counter.ts",
     "./header": "./components/header.ts",
+      "./user-list": "./components/UserList.ts",
     "./setup-counter": "./utils/counter.ts"
   },
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"**/*.ts\""
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "eslint": "^8.57.0",
-    "typescript": "5.5.4"
+   "@eslint/js": "^9.28.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.28.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.34.0",
+    "vite": "^6.3.5"
   }
 }
