--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,11 +2,7 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "exports": {
-     ".": "./index.ts",
-    "./counter": "./components/counter.ts",
-    "./header": "./components/header.ts",
-      "./user-list": "./components/UserList.ts",
-    "./setup-counter": "./utils/counter.ts"
+    ".": "./index.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -14,10 +10,11 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
-   "@eslint/js": "^9.28.0",
+    "@eslint/js": "^9.28.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
