--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,7 +2,9 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "exports": {
-    ".": "./index.ts"
+    ".": "./index.ts",
+    "./styles.css": "./dist/index.css",
+    "./*": "./dist/*.js"
   },
   "license": "MIT",
   "scripts": {
@@ -32,6 +34,10 @@
     "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/cli": "^4.1.10"
   }
 }
