--- a/apps/betdaypro/package.json
+++ b/apps/betdaypro/package.json
@@ -18,6 +18,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
